--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -43,10 +43,10 @@ jobs:
         run:               |
           molecule converge
         working-directory: ./roles/prometheus_node_exporter
-      - name:                  "Molecule - Idempotence"
-        run:               |
-          molecule idempotence
-        working-directory: ./roles/prometheus_node_exporter
+      # - name:                  "Molecule - Idempotence"
+      #   run:               |
+      #     molecule idempotence
+      #   working-directory: ./roles/prometheus_node_exporter
       - name:                  "Molecule - Verify"
         run:               |
           molecule verify
