--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -11,9 +11,9 @@ repository:
   has_downloads: true
   default_branch: main
   is_template: false
-  allow_squash_merge: true
+  allow_squash_merge: false
   allow_merge_commit: true
-  allow_rebase_merge: true
+  allow_rebase_merge: false
   # Dependabot
   enable_automated_security_fixes: true
   enable_vulnerability_alerts: true
@@ -68,7 +68,7 @@ branches:
           teams: []
       required_status_checks:
         strict: true
-        contexts: [ "sample" ]
+        contexts: ["sample"]
       enforce_admins: true
       required_linear_history: true
       restrictions:
